plugins {
    id 'org.springframework.boot'
    id 'io.spring.dependency-management'
    id 'java'
}

group = 'com.kodilla'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = "17"

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-api', version: '5.8.2'
    testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter-engine', version: '5.8.2'
    testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '4.2.0'
    testImplementation group: 'org.mockito', name: 'mockito-core', version: '4.2.0'
}

tasks.named('test') {
    useJUnitPlatform()
}

task prepareKotlinBuildScriptModel {

}

compileJava {
    options.compilerArgs += ['--enable-preview']
}
targetCompatibility = JavaVersion.VERSION_17
